# softblit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/softblit/: Cargo.toml
crates/softblit-demo/: Cargo.toml
crates/softblit-demo/src/: lib.rs
crates/softblit-demo/www/: demo-worker.js  index.html  worker.html
crates/softblit-ffi/: Cargo.toml  config.toml
crates/softblit-ffi/examples/: ffi_smoke.rs
crates/softblit-ffi/src/: imp.rs  lib.rs
crates/softblit-native/: Cargo.toml
crates/softblit-native/src/: lib.rs  windows_d3d.rs  windows_dx12.rs  windows_vulkan.rs
crates/softblit-spike/: Cargo.toml
crates/softblit-spike/examples/: leak_check.rs  probe.rs
crates/softblit-spike/src/: lib.rs
crates/softblit/examples/: native_demo.rs
crates/softblit/src/: error.rs  format.rs  gpu.rs  lib.rs  rect.rs  scaling.rs  surface.rs
crates/softblit/src/shaders/: blit.wgsl  unpack24.wgsl
dotnet/: Softblit.slnx
dotnet/Softblit.Avalonia/: Softblit.Avalonia.csproj  SoftblitCanvas.cs  SoftblitEnums.cs
dotnet/Softblit.Demo/: FrameGenerator.cs  MainWindow.cs  Program.cs  Softblit.Demo.csproj
dotnet/Softblit.Interop/: Softblit.Interop.csproj
dotnet/Softblit.IronVncDemo/: Config.cs  IronVnc.cs  KeyMapper.cs  MainWindow.cs  Program.cs  Softblit.IronVncDemo.csproj  UserEvent.cs
dotnet/Spike/: NativeMethods.cs  Program.cs  Spike.csproj  SpikeControl.cs  app.manifest
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/live/: session-check.mjs
e2e/tests/: softblit.spec.ts  webgl.spec.ts
