[workspace]
members = ["crates/softblit", "crates/softblit-demo", "crates/softblit-ffi", "crates/softblit-native", "crates/softblit-spike"]
resolver = "2"

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
wgpu = { version = "29", default-features = false, features = ["webgpu", "wgsl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
