[package]
name = "softblit-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
# WebGL2 fallback in the underlying renderer (used when WebGPU is unavailable at runtime).
webgl = ["softblit/webgl"]

[dependencies]
softblit = { path = "../softblit" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "Location",
    "Performance",
    "console",
    "OffscreenCanvas",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "ImageBitmap",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "ImageData",
] }
