[package]
name = "softblit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Format-aware framebuffer presentation for WebGPU: dirty-rect partial uploads, GPU-side unpacking of packed formats (RGB24), scaling-mode control."

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCanvasElement", "OffscreenCanvas"] }
